# docs/swagger.yaml
@@ -2,13 +2,13 @@ basePath: /directory/api/v1
 definitions:
   types.AuthRequest:
     properties:
-      email-address:
+      email_address:
         type: string
-      token:
+      otp:
         type: string
     required:
-    - email-address
-    - token
+    - email_address
+    - otp
     type: object
   types.EmailRequest:
     properties:
@@ -81,7 +81,30 @@ info:
   title: Business directory API
   version: "1.0"
 paths:
-  /auth:
+  /auth/activate:
+    get:
+      consumes:
+      - application/json
+      description: Request to verification token
+      parameters:
+      - description: token
+        in: query
+        name: token
+        type: string
+      - description: uid
+        in: query
+        name: uid
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.SuccessResponse'
+      tags:
+      - Auth
+  /auth/authentication:
     post:
       consumes:
       - application/json
@@ -101,29 +124,6 @@ paths:
           schema:
             $ref: '#/definitions/utils.SuccessResponse'
       summary: request to authentication token
-      tags:
-      - Auth
-  /auth/activate:
-    post:
-      consumes:
-      - application/json
-      description: Request to verification token
-      parameters:
-      - description: Institution type
-        in: query
-        name: token
-        type: string
-      - description: Institution type
-        in: query
-        name: type
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/utils.SuccessResponse'
       tags:
       - Auth
   /auth/login:
