# internal/common/types/types.go
@@ -4,9 +4,9 @@ import "time"
 
 type (
 	LoginResponse struct {
-		Token         string             `json:"token"`
-		Profile       UserProfile        `json:"profile"`
-		Organisations OrganisationMember `json:"organisations"`
+		Token         string               `json:"access_token"`
+		Profile       UserProfile          `json:"profile"`
+		Organisations []OrganisationMember `json:"organisations"`
 	}
 
 	OrganisationMember struct {
@@ -14,14 +14,14 @@ type (
 	}
 
 	UserProfile struct {
-		ID            string     `json:"id"`
-		FirstName     string     `json:"first_name"`
-		LastName      string     `json:"last_name"`
-		DisplayName   string     `json:"display_name"`
-		EmailAddress  string     `json:"email_address"`
-		PhoneNumber   string     `json:"phone_number"`
-		EmailVerified bool       `json:"email_verified"`
-		LastLogin     *time.Time `json:"last_login"`
+		ID            string    `json:"id"`
+		FirstName     string    `json:"first_name"`
+		LastName      string    `json:"last_name"`
+		DisplayName   string    `json:"display_name"`
+		EmailAddress  string    `json:"email_address"`
+		PhoneNumber   string    `json:"phone_number"`
+		EmailVerified bool      `json:"email_verified"`
+		LastLogin     time.Time `json:"last_login"`
 	}
 )
 
